# mdbook-replace

./: Cargo.toml  README.md
src/: main.rs
